refactored code and added markdown commentary

--- a/detection.ipynb
+++ b/detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,32 +31,52 @@
     "    else:\n",
     "        break\n",
     "\n",
-    "cap.release()\n",
-    "cv2.destroyAllWindows()\n"
+    "# cap.release()\n",
+    "# cv2.destroyAllWindows()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'frame_width' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m out \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mVideoWriter(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdriving_frame.mp4\u001b[39m\u001b[38;5;124m'\u001b[39m,cv2\u001b[38;5;241m.\u001b[39mVideoWriter_fourcc(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mM\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJ\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mG\u001b[39m\u001b[38;5;124m'\u001b[39m), \u001b[38;5;241m10\u001b[39m, (\u001b[43mframe_width\u001b[49m,frame_height))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'frame_width' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "out = cv2.VideoWriter('outpy.avi',cv2.VideoWriter_fourcc('M','J','P','G'), 10, (frame_width,frame_height))"
+    "# out = cv2.VideoWriter('driving_frame.mp4',cv2.VideoWriter_fourcc('M','J','P','G'), 10, (frame_width,frame_height))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Current dilemma at hand:\n",
+    "---\n",
+    "---\n",
+    "It would appear that cap.release() and cv2.destroyAllWindows() prevents the display of the video file as the code executes within milliseconds... Therefore the execution of the program opens and closes the file before it may be rendered. More study of the OpenCV documentation is needed to remedy this error.\n",
+    "\n",
+    "---\n",
+    "---\n",
+    "\n",
+    "The solution will be found within: https://docs.opencv.org/3.0-beta/doc/py_tutorials/py_gui/py_video_display/py_video_display.html"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Furthermore, I must revisit the documentation as it elaborates upon saving the video data using cv2.VideoWriter. The comment in cell 8 serves as a reference point."
+   ]
   }
  ],
  "metadata": {
